# AIDD-Spark

./: .gitignore  README.md  myst.yml  pyproject.toml  roadmap.md
.github/workflows/: static.yml
aidd/: cli.py
tutorials/: demo.ipynb
tutorials/basic/: learning-resources.md  reading.md  writing.md
tutorials/mols/: rdkit.ipynb
